# cmake_conan_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py
tools/: install-deps.py  reconfigure-cmake.py
